--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-        sudo apt update
-        sudo apt install g++-7
-        cmake $GITHUB_WORKSPACE -D CMAKE_CXX_COMPILER=g++-7
-        make test
-        ./test
+          sudo apt update
+          sudo apt install g++-7
+          cmake ${{github.workspace}} -DCMAKE_CXX_COMPILER=g++-7
+          make test
+          ./test
