--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,16 @@
 cmake_minimum_required(VERSION 3.20)
-project(AwesomeLandlordBot)
-add_executable(test src/base.cpp src/strategy.cpp src/environment.cpp test/base.cpp test/main.cpp)
-add_executable(main src/base.cpp src/strategy.cpp src/environment.cpp src/main.cpp)
+
+project(
+  AwesomeLandlordBot
+  DESCRIPTION "An agent for the game FightTheLandlord implemented with Recursive Hand Cards Partition algorithm and Reinforcement Learning improvements"
+  LANGUAGES CXX
+  VERSION 0.0.1
+)
+
+set(CXX_STANDARD 11)
+set(CXX_STANDARD_REQUIRED True)
+
+include(CTest)
+
+add_subdirectory(src)
+add_subdirectory(test)
