--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,4 +11,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: mkdir build && cd build && cmake .. && cmake --build . && ctest
+      - run: cmake -B build && cmake --build build && ctest --test-dir build
