--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ include(FetchContent)
 
 FetchContent_Declare(
   Catch2
-  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_REPOSITORY https://github.com.cnpmjs.org/catchorg/Catch2.git
   GIT_TAG        v2.13.1
 )
 FetchContent_MakeAvailable(Catch2)
