--- a/src/strategy/CMakeLists.txt
+++ b/src/strategy/CMakeLists.txt
@@ -3,14 +3,16 @@ add_library(
   # Evaluator
   simple_evaluator.cpp
   # AttackingSelector
-  solo_selector.cpp
-  boom_terminator_selector.cpp
-  defending_absolute_dominant_selector.cpp
   one_shot_selector.cpp
-  full_enumeration_selector.cpp
   attacking_absolute_dominant_selector.cpp
+  selfish_1_selector.cpp
+  selfish_2_selector.cpp
+  minimal_selector.cpp
+  empty_bomb_rocket_selector.cpp
   # DefendingSelector
-  pass_selector.cpp
+  defending_absolute_dominant_selector.cpp
   same_category_selector.cpp
+  boom_terminator_selector.cpp
+  pass_selector.cpp
 )
 target_link_libraries(libstrategy libcard)
