Rearranged all tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,8 @@ project(
   VERSION 0.0.1
 )
 
-set(CXX_STANDARD 11)
-set(CXX_STANDARD_REQUIRED True)
+set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 include(CTest)
 
