--- a/src/strategy/CMakeLists.txt
+++ b/src/strategy/CMakeLists.txt
@@ -8,11 +8,12 @@ add_library(
   selfish_1_selector.cpp
   selfish_2_selector.cpp
   minimal_selector.cpp
-  empty_bomb_rocket_selector.cpp
+  attacking_bomb_rocket_selector.cpp
+  solo_selector.cpp
   # DefendingSelector
   defending_absolute_dominant_selector.cpp
   same_category_selector.cpp
-  boom_terminator_selector.cpp
+  defending_bomb_rocket_selector.cpp
   pass_selector.cpp
 )
 target_link_libraries(libstrategy libcard)
